# Hubbard

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  allocator.cpp  allocator.h  basis.cpp  basis.h  common.h  compute.cpp  compute.cu  compute.h  hubbard.cpp  hubbard.h  hubbard_common.h  hubbard_compute.cpp  hubbard_compute.cu  hubbard_compute.h  profiler.cpp  profiler.h  solver.cpp  solver.h  testing.cpp  testing.h  ui.cpp  ui.h  utils.cpp  utils.h
